Fix mobile sidebar alignments

--- a/assets/styles/modules/navbar.scss
+++ b/assets/styles/modules/navbar.scss
@@ -131,6 +131,9 @@ body.toggled {
   }
 }
 
+#CollapsingNavbar .nav > a.nav-link {
+  padding-left: 11px;
+}
 
 // Search icon
 #block-searchicon {
@@ -144,6 +147,7 @@ body.toggled {
     width: 20px;
     height: 20px;
     float: left;
+    padding-left: 43px;
     text-indent: -9999px;
   }
 
